src/style.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
@import 'tailwindcss';

@theme {
  --font-sans: system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
  --font-display: 'Noto Serif', Georgia, Cambria, 'Times New Roman', Times, serif;
  --color-black: #07090b;

  --color-gray-50: oklch(95.67% 0.005 247.84);
  --color-gray-100: oklch(91.3% 0.01 247.92);
  --color-gray-200: oklch(82.65% 0.022 245.89);
  --color-gray-300: oklch(74.81% 0.032 245.23);
  --color-gray-400: oklch(66.21% 0.029 246.51);
  --color-gray-500: oklch(57.63% 0.024 246.07);
  --color-gray-600: oklch(49.03% 0.021 245.66);
  --color-gray-700: oklch(41.15% 0.018 245.05);
  --color-gray-800: oklch(32.83% 0.013 238.93);
  --color-gray-900: oklch(24.11% 0.01 248.22);
  --color-gray-950: oklch(19.73% 0.009 240.35);

  --color-primary-50: oklch(95.73% 0.02 277);
  --color-primary-100: oklch(91.41% 0.04 276.33);
  --color-primary-200: oklch(82.99% 0.083 273.94);
  --color-primary-300: oklch(73.84% 0.131 270.45);
  --color-primary-400: oklch(65.35% 0.18 266.06);
  --color-primary-500: oklch(57.03% 0.219 259.86);
  --color-primary-600: oklch(48.28% 0.185 259.8);
  --color-primary-700: oklch(39.51% 0.15 259.74);
  --color-primary-800: oklch(31.66% 0.121 259.71);
  --color-primary-900: oklch(22.73% 0.087 259.64);
  --color-primary-950: oklch(17.98% 0.069 260.35);

  --color-red-50: oklch(95.9% 0.017 13.2);
  --color-red-100: oklch(91.76% 0.035 13.42);
  --color-red-200: oklch(83.65% 0.075 13.61);
  --color-red-300: oklch(75.6% 0.123 14.08);
  --color-red-400: oklch(67.72% 0.18 15.93);
  --color-red-500: oklch(59.35% 0.207 17.67);
  --color-red-600: oklch(50.48% 0.176 17.67);
  --color-red-700: oklch(41.5% 0.145 17.52);
  --color-red-800: oklch(32.49% 0.113 17.99);
  --color-red-900: oklch(23.44% 0.082 17.32);
  --color-red-950: oklch(18.51% 0.065 16.91);

  --color-green-50: oklch(94.21% 0.051 209.98);
  --color-green-100: oklch(88.41% 0.113 207.27);
  --color-green-200: oklch(78.86% 0.135 205.74);
  --color-green-300: oklch(68.58% 0.117 206.38);
  --color-green-400: oklch(58.46% 0.1 206.29);
  --color-green-500: oklch(48.83% 0.084 205.87);
  --color-green-600: oklch(41.42% 0.071 207.03);
  --color-green-700: oklch(34.64% 0.059 206.7);
  --color-green-800: oklch(27.87% 0.048 205.96);
  --color-green-900: oklch(20.26% 0.035 204.77);
  --color-green-950: oklch(16.19% 0.028 203.6);
}

@custom-variant dark (&:where(.dark, .dark *));

@layer base {
  body {
    color: var(--color-black);
    background-color: var(--color-white);
  }

  .dark body {
    color: var(--color-white);
    background-color: var(--color-black);
  }
}

@utility ui-control {
  @apply rounded-md border border-gray-300 px-3 py-1.5 transition outline-none hover:bg-gray-50 focus:bg-gray-50 focus:ring-3 focus:ring-gray-300 disabled:cursor-not-allowed disabled:border-gray-200 disabled:bg-transparent! disabled:text-gray-500 dark:border-gray-700 dark:hover:bg-gray-900 dark:focus:bg-gray-900 dark:focus:ring-gray-700 dark:disabled:border-gray-800;
}

